[package]
name = "gate_learner"
version = "0.1.0"
edition = "2024"
authors = ["Dzulkifli Anwar"]
description = "A multilayer perceptron engine to learn N-input logic gates."

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
thiserror = "2.0.18"
clap ={version = "4.6.1", features = ["derive"]}
rand = "0.10.1"
rand_chacha = "0.10.0"
plotters = { version = "0.3.7", optional = true}

[features]
default = ["visualise"]
visualise = ["dep:plotters"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[profile.release]
debug = true

[[bench]]
name = "mlp_benchmark"
harness = false
